test_suite/tests/ui/identifier/other_not_last.stderr
error: #[serde(other)] must be on the last variant
 --> $DIR/other_not_last.rs:8:5
  |
8 | /     #[serde(other)]
9 | |     Other,
  | |_________^

error: aborting due to previous error

